Bug 1142079 - Disable refresh driver telemetry on Android. r=froydnj, a=lmandel